# Bellwether

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  setup-env.txt
.github/workflows/: ci.yml  deploy.yml
deploy/: entrypoint.sh
docs/plans/: 2026-05-31-ingestor-extractor.md  2026-06-01-producer-orchestrator.md  2026-06-02-llm-scrape-engine.md  2026-06-02-scrape-spec-ui-redesign.md  2026-06-03-firecrawl-fetch-adapter.md  2026-06-03-gemini-llm-provider.md  2026-06-03-scrape-extract-split-ui.md
docs/specs/: 2026-05-31-ingestor-extractor-design.md  2026-05-31-ui-prototype-design.md  2026-06-01-llm-scrape-engine-design.md  2026-06-01-producer-orchestrator-design.md  2026-06-02-scrape-spec-ui-redesign-design.md  2026-06-03-firecrawl-fetch-adapter-design.md  2026-06-03-gemini-llm-provider-design.md  2026-06-03-scrape-extract-split-design.md
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
producers/gdelt/: README.md  producer.py  template.toml
producers/polymarket/: README.md  fetch.py  (+2 more)
tests/: conftest.py  test_api.py  test_api_reads.py  test_api_scrape.py  test_binding.py  test_client.py  test_config.py  test_contracts.py  test_control_plane_api.py  test_db.py  test_extractor_registry.py  test_fetch.py  test_gdelt_extractor.py  test_gdelt_producer.py  test_gdelt_template.py  test_gold.py  test_gold_value.py  test_ingest.py  test_llm.py  test_migrate.py  test_normalizers.py  test_orchestrator.py  test_polymarket_fetch.py  test_polymarket_template.py  test_queue.py  test_reads.py  test_run_template.py  test_schedules.py  test_scrape_collector.py  test_scrape_extractor.py  test_scrape_specs.py  test_seed_demo.py  test_seed_polymarket_demo.py  test_smoke.py  test_storage.py  test_templates.py  test_web_analysis.py  test_web_live.py  test_web_mock.py  test_web_schedules.py  (+6 more)
(+107 files in other folders)
