[project]
name = "bellweather"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "psycopg[binary,pool]>=3.2",
  "google-cloud-storage>=2.18",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
  "typer>=0.12",
]

[dependency-groups]
# pandas is here (not just `ui`) because the UI data/analysis tests import it.
dev = ["pytest>=8.3", "ruff>=0.7", "pytest-httpserver>=1.1", "pandas>=2.2"]
# Streamlit is the local-prototype-only runtime; not a dependency of the pipeline.
# >=1.58: the pages use the width="stretch" API (st.dataframe/st.altair_chart), which
# older releases (e.g. 1.39) don't accept — pinning to the version we validate against.
ui = ["streamlit>=1.58", "pandas>=2.2"]

[project.scripts]
bellweather = "bellweather.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bellweather"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src", "."]
